Actualizado, preparando para los cambios en la practica 1 actualizada

--- a/Practica1/explicacion.tex
+++ b/Practica1/explicacion.tex
@@ -41,111 +41,115 @@
 \section{Introducion}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_001.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_002.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_003.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_004.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_005.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_006.png}
 \end{frame}
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_007.png}
 \end{frame}
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_008.png}
 \end{frame}
 \begin{frame}
-  \frametitle{Subrutinas}
+  \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_009.png}
 \end{frame}
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_010.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_011.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_012.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_013.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
-\includegraphics[scale=0.70]{imgs/imagen_013_bis.png}
-\end{frame}
-
-\begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_014.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_015.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_016.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_017.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_018.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_019.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_020.png}
 \end{frame}
 
 \begin{frame}
-\frametitle{Subrutinas}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
 \includegraphics[scale=0.70]{imgs/imagen_021.png}
 \end{frame}
 
+\begin{frame}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
+\includegraphics[scale=0.70]{imgs/imagen_022.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
+\includegraphics[scale=0.70]{imgs/imagen_023.png}
+\end{frame}
 
 \end{document}
 
