Ajustada a la practica nueva

--- a/Practica1/explicacion.tex
+++ b/Practica1/explicacion.tex
@@ -42,113 +42,108 @@
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_001.png}
+\includegraphics[scale=0.65]{imgs/001.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_002.png}
+\includegraphics[scale=0.65]{imgs/002.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_003.png}
+\includegraphics[scale=0.65]{imgs/003.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_004.png}
+\includegraphics[scale=0.65]{imgs/004.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_005.png}
+\includegraphics[scale=0.65]{imgs/005.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_006.png}
+\includegraphics[scale=0.65]{imgs/006.png}
 \end{frame}
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_007.png}
+\includegraphics[scale=0.65]{imgs/007.png}
 \end{frame}
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_008.png}
+\includegraphics[scale=0.65]{imgs/008.png}
 \end{frame}
 \begin{frame}
   \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_009.png}
+\includegraphics[scale=0.65]{imgs/009.png}
 \end{frame}
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_010.png}
-\end{frame}
-
-\begin{frame}
-\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_011.png}
+\includegraphics[scale=0.65]{imgs/010.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_012.png}
+\includegraphics[scale=0.65]{imgs/011.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_013.png}
+\includegraphics[scale=0.65]{imgs/012.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_014.png}
+\includegraphics[scale=0.65]{imgs/013.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_015.png}
+\includegraphics[scale=0.65]{imgs/014.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_016.png}
+\includegraphics[scale=0.65]{imgs/015.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_017.png}
+\includegraphics[scale=0.65]{imgs/016.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_018.png}
+\includegraphics[scale=0.65]{imgs/017.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_019.png}
+\includegraphics[scale=0.65]{imgs/018.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_020.png}
+\includegraphics[scale=0.65]{imgs/019.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_021.png}
+\includegraphics[scale=0.65]{imgs/020.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_022.png}
+\includegraphics[scale=0.65]{imgs/021.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.70]{imgs/imagen_023.png}
+\includegraphics[scale=0.65]{imgs/022.png}
 \end{frame}
 
 \end{document}
