Actualizada explicación de práctica 1, agregado ejercicio 10 - SWAP

--- a/Practica1/explicacion.tex
+++ b/Practica1/explicacion.tex
@@ -1,23 +1,23 @@
 \documentclass{beamer}
 \special{landscape}
 
-%\usetheme{Berlin}
+%\usetheme{Boadilla}
+%\usetheme{Hannover}
+%\usetheme{Montpellier}
+%\usetheme{PaloAlto}
+%\usetheme{Szeged}
 \usetheme{Warsaw}
 
-%\usecolortheme{seahorse}
-%\usefonttheme[onlysmall]{structurebold}
 
 \setbeamertemplate{headline}[split]
 \setbeamertemplate{footline}[default]
 \setbeamertemplate{footline}[miniframes theme]
-%\logo{\includegraphics[scale=0.25]{lifia_logo.png}}
 
 \mode<presentation>
+
 \usepackage[spanish]{babel}
-\usepackage{beamerthemesplit}
 \usepackage[utf8]{inputenc}
 \usepackage{color}      % use if color is used in text
-
 
 % Comandos en modo Verbatim
 %\usepackage{fancyvrb}
@@ -38,112 +38,299 @@
 \titlepage
 \end{frame}
 
-\section{Introducion}
+\section{Ejercicio 7}
 
+\subsection{Enunciado}
 \begin{frame}
-\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/001.png}
+\frametitle{Ejercicio 7 - Multiplicación de números sin signo}
+\begin{itemize}
+\item El programa utiliza una subrutina para multiplicar dos números sin signo mayores que cero.
+\item Se pasan los números a multiplicar por valor.  
+\item Se para por referencia la dirección donde se debe guardar el resultado.
+\item Todos los parámetros se pasan a través de la pila
+\end{itemize}
 \end{frame}
 
+\subsection{Desarrollo}
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/002.png}
-\end{frame}
-
-\begin{frame}
-\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/003.png}
-\end{frame}
-
-\begin{frame}
-\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/004.png}
-\end{frame}
-
-\begin{frame}
-\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/005.png}
+\includegraphics[scale=0.65]{ejercicio07/001.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/006.png}
+\includegraphics[scale=0.65]{ejercicio07/002.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
+\includegraphics[scale=0.65]{ejercicio07/003.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
+\includegraphics[scale=0.65]{ejercicio07/004.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
+\includegraphics[scale=0.65]{ejercicio07/005.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
+\includegraphics[scale=0.65]{ejercicio07/006.png}
 \end{frame}
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/007.png}
+\includegraphics[scale=0.65]{ejercicio07/007.png}
 \end{frame}
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/008.png}
+\includegraphics[scale=0.65]{ejercicio07/008.png}
 \end{frame}
 \begin{frame}
   \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/009.png}
+\includegraphics[scale=0.65]{ejercicio07/009.png}
 \end{frame}
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/010.png}
-\end{frame}
-
-\begin{frame}
-\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/011.png}
+\includegraphics[scale=0.65]{ejercicio07/010.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/012.png}
+\includegraphics[scale=0.65]{ejercicio07/011.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/013.png}
+\includegraphics[scale=0.65]{ejercicio07/012.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/014.png}
+\includegraphics[scale=0.65]{ejercicio07/013.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/015.png}
+\includegraphics[scale=0.65]{ejercicio07/014.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/016.png}
+\includegraphics[scale=0.65]{ejercicio07/015.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/017.png}
+\includegraphics[scale=0.65]{ejercicio07/016.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/018.png}
+\includegraphics[scale=0.65]{ejercicio07/017.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/019.png}
+\includegraphics[scale=0.65]{ejercicio07/018.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/020.png}
+\includegraphics[scale=0.65]{ejercicio07/019.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/021.png}
+\includegraphics[scale=0.65]{ejercicio07/020.png}
 \end{frame}
 
 \begin{frame}
 \frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
-\includegraphics[scale=0.65]{imgs/022.png}
+\includegraphics[scale=0.65]{ejercicio07/021.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 7 - Pasaje de parámetros por pila}
+\includegraphics[scale=0.65]{ejercicio07/022.png}
+\end{frame}
+
+\section{Ejercicio 10}
+
+\subsection{Enunciado}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP (intercambio) }
+\begin{itemize}
+\item Escribir una subrutina SWAP que intercambie dos datos de 16 bits almacenados en memoria.
+\item Los parámetros deben ser pasados por referencia desde el programa principal a través de la pila.  
+\end{itemize}
+\end{frame}
+
+\subsection{Desarrollo}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/000.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/001.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/002.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/003.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/004.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/005.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/006.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/007.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/008.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/009.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/010.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/011.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/012.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/013.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/014.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/015.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/016.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/017.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/018.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/019.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/020.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/021.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/022.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/023.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/024.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/025.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/026.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/027.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/028.png}
+\end{frame}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP}
+\includegraphics[scale=0.65]{ejercicio10/029.png}
+\end{frame}
+
+\subsection{Observaciones}
+
+\begin{frame}
+\frametitle{Ejercicio 10 - SWAP (intercambio) }
+El programa cumple con el enunciado, pero...
+\begin{itemize}
+\item No desapila los dos parámetros de la pila
+\item La subrutina preserva los registros AX, BX y DX. Pero modifica los registro BX, CX y DX. No es necesario preservar AX, CX si.
+\end{itemize}
 \end{frame}
 
 \end{document}
